/*
 *  Copyright (c) 2016, https://github.com/nebula-im
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package zproto;

option java_package = "com.zchat.engine.zproto";
option java_outer_classname = "ZProto";
option optimize_for = CODE_SIZE;


message GroupMember {
  string user_id = 1;     // 用户ID
  string inviter_uid = 2; // 邀请者
  int64  date = 3;        // 加入群时间
  bool is_admin = 4;      // 是否群管理员
}

message Group {
  string group_id = 1;              // 去ID
  string title = 2;                 // 群标题
  repeated GroupMember members = 3; // 群成员
}

// CreateGroupReq --> CreateGroupRsp
message CreateGroupReq {
  string creator_user_id = 1;
  int64 client_group_id = 2;    // 客户端创建的随机ID，去重
  string title = 3;             // 群标题
  repeated string user_ids = 4; // 成员
}

// Created group
message CreateGroupRsp {
  uint64 seq = 1;                 // 序号
  uint64 created = 2;             // 创建时间
  Group group = 3;                // 群信息
  repeated string user_ids = 4;   // 群成员
}

